<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="BetweenWidth">0.5</string>
    <string name="BorderWidth">2</string>
    <string name="FilletWidth">0.5</string>
    <string name="LineWidth">0.07</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">Add</string>
    <string name="add_ok">Add success!</string>
    <string name="adddevice">Add bluetooth lock</string>
    <string name="already_exists">This device already exists!</string>
    <string name="answer">Answer：</string>
    <string name="app_name">Bozzys Padlock</string>
    <string name="auto">Auto</string>
    <string name="automatic">Auto unlocking</string>
    <string name="automatic_unlocking">Auto unlocking？</string>
    <string name="back">Back</string>
    <string name="ble">My bluetooth lock</string>
    <string name="cancle">Cancel</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="closemanage">Close</string>
    <string name="dataerror">The data format is incorrect</string>
    <string name="del_device">Delete device</string>
    <string name="del_record">Delete record</string>
    <string name="deldevice">Delete device</string>
    <string name="devicemanage">Device manage</string>
    <string name="dissimilarity">The two password is inconsistent</string>
    <string name="error2">Answer wrong!</string>
    <string name="error3">Too short!</string>
    <string name="error4">The digital password length is 6</string>
    <string name="error5">The digital password length is 6</string>
    <string name="error6">Please verify the password</string>
    <string name="error7">Please connect first</string>
    <string name="getpwd">Forgot the password?</string>
    <string name="inputpwd">Draw gesture password</string>
    <string name="inputpwd1">Input a password</string>
    <string name="inputpwd10">Set password</string>
    <string name="inputpwd11">Confirm password</string>
    <string name="invalid_pwd">Password error</string>
    <string name="manage">Manage</string>
    <string name="modify_name">Modify name</string>
    <string name="modify_password">Modify key password</string>
    <string name="myOpen">Open</string>
    <string name="mystop">Ban</string>
    <string name="name">Device name:</string>
    <string name="nonumpwd">Please set the number password!</string>
    <string name="noprompt">No password hints!</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="open">Unlock</string>
    <string name="open_bluetooth">Turn on bluetooth!</string>
    <string name="open_gps_msg">Please turn on GPS positioning, otherwise we will not be able to connect Bluetooth devices.</string>
    <string name="openauto">Auto unlock settings</string>
    <string name="opendata">Unlocked records</string>
    <string name="openpermission">Please open permissions,otherwise can\'t scan the device!</string>
    <string name="password">Password</string>
    <string name="password1">Password:</string>
    <string name="password2">Repeat:</string>
    <string name="phrase">Forgot the password?</string>
    <string name="pwd_false">Password error</string>
    <string name="pwd_modify_false">Modify failed</string>
    <string name="pwd_modify_true">Modify success</string>
    <string name="pwd_true">Password correct</string>
    <string name="pwdlenerror">The password is too short.</string>
    <string name="query">View records</string>
    <string name="question">Question:</string>
    <string name="record">Query record</string>
    <string name="refresh">Renew</string>
    <string name="remember_ps">Remember password</string>
    <string name="resetconnpwd">Modify the password</string>
    <string name="resetdevicepwd">Modify key password</string>
    <string name="resetinputpwd">Repaint gesture password</string>
    <string name="resetname">Open gesture password</string>
    <string name="resetname1">Modify device name</string>
    <string name="resetprompt">Safety question</string>
    <string name="resetpwd">Modify login password</string>
    <string name="resetrecord">Modify record</string>
    <string name="save_error">Save failed. Please check whether read-write permission are opened!</string>
    <string name="save_ok">Save success,save path is</string>
    <string name="save_share">Save QR code</string>
    <string name="scanqr">扫描开锁</string>
    <string name="search_menu_title">Search</string>
    <string name="selectpic">选择二维码</string>
    <string name="set_conn_pwd">Modify password</string>
    <string name="set_name">Set name</string>
    <string name="set_name_error">Names can\'t be empty！</string>
    <string name="share">Save the key</string>
    <string name="shareapp">Share APP</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sure">Yes</string>
    <string name="sure_del_dev">Delete bluetooth lock device？</string>
    <string name="sure_del_record">Do you want to delete the unlock record?</string>
    <string name="sure_delall_record">Do you want to delete all unlock records</string>
    <string name="sure_deldevice">Delete the device?</string>
    <string name="time">Time:</string>
    <string name="unlocking">Unlocking</string>
    <string name="user">User center</string>
</resources>
