<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#00000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@drawable/add_bg" android:layout_width="250dp" android:layout_height="230dp" android:layout_marginTop="1dp" android:layout_centerHorizontal="true">
        <TextView android:textSize="21dp" android:textColor="@color/textcolor" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/unlocking"/>
        <EditText android:textSize="18sp" android:textColor="@color/textcolor1" android:textColorHint="@color/textcolor1" android:gravity="center_vertical" android:id="@+id/et_ps" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="15dp" android:layout_marginTop="18dp" android:layout_marginRight="15dp" android:hint="@string/password" android:inputType="number"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="10dp" android:layout_marginRight="15dp">
            <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <CheckBox android:id="@+id/cb_rps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true"/>
            <TextView android:textSize="15sp" android:textColor="@color/textcolor" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remember_ps"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginTop="20dp" android:baselineAligned="false">
            <TextView android:textSize="20dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_refresh" android:background="@drawable/refresh1_p" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/sure" android:layout_weight="1"/>
            <TextView android:textSize="20dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_close" android:background="@drawable/refresh2_p" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/cancle" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
