<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/activity_bsdq_main" android:background="#00000000" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="@drawable/btn_bg4" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="20dp" android:layout_marginTop="124dp" android:layout_marginRight="20dp" android:layout_marginBottom="90dp">
        <TextView android:textSize="21dp" android:textColor="#ff000000" android:gravity="center" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="40dp" android:text="@string/devicemanage" android:layout_centerHorizontal="true"/>
        <RelativeLayout android:id="@+id/rel1" android:layout_width="match_parent" android:layout_height="44dp" android:layout_below="@+id/textView5">
            <TextView android:textSize="20dp" android:textColor="@color/textcolor3" android:gravity="center" android:id="@+id/tv_name" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="14dp" android:text="@string/name"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rel2" android:layout_width="match_parent" android:layout_height="44dp" android:layout_below="@+id/rel1">
            <ImageView android:id="@+id/imageView5" android:padding="3dp" android:layout_width="44dp" android:layout_height="44dp" android:layout_marginLeft="14dp" android:src="@mipmap/ic_setname"/>
            <TextView android:textSize="18dp" android:textColor="@color/textcolor3" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:text="@string/resetname1" android:layout_toEndOf="@+id/imageView5"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rel3" android:layout_width="match_parent" android:layout_height="44dp" android:layout_below="@+id/rel2">
            <ImageView android:id="@+id/imageView53" android:padding="3dp" android:layout_width="44dp" android:layout_height="44dp" android:layout_marginLeft="14dp" android:src="@mipmap/ic_connpwd"/>
            <TextView android:textSize="18dp" android:textColor="@color/textcolor3" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:text="@string/resetconnpwd" android:layout_toEndOf="@+id/imageView53"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rel4" android:layout_width="match_parent" android:layout_height="44dp" android:layout_below="@+id/rel3">
            <ImageView android:id="@+id/imageView54" android:padding="3dp" android:layout_width="44dp" android:layout_height="44dp" android:layout_marginLeft="14dp" android:src="@mipmap/ic_auto"/>
            <TextView android:textSize="18dp" android:textColor="@color/textcolor3" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:text="@string/openauto" android:layout_toEndOf="@+id/imageView54"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rel5" android:layout_width="match_parent" android:layout_height="44dp" android:layout_below="@+id/rel4">
            <ImageView android:id="@+id/imageView55" android:padding="3dp" android:layout_width="44dp" android:layout_height="44dp" android:layout_marginLeft="14dp" android:src="@mipmap/ic_devicepwd"/>
            <TextView android:textSize="18dp" android:textColor="@color/textcolor3" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:text="@string/resetdevicepwd" android:layout_toEndOf="@+id/imageView55"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rel6" android:layout_width="match_parent" android:layout_height="44dp" android:layout_below="@+id/rel5">
            <ImageView android:id="@+id/imageView56" android:padding="3dp" android:layout_width="44dp" android:layout_height="44dp" android:layout_marginLeft="14dp" android:src="@mipmap/ic_share"/>
            <TextView android:textSize="18dp" android:textColor="@color/textcolor3" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:text="@string/share" android:layout_toEndOf="@+id/imageView56"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rel7" android:layout_width="match_parent" android:layout_height="44dp" android:layout_below="@+id/rel6" android:layout_alignParentStart="true">
            <ImageView android:id="@+id/imageView57" android:padding="3dp" android:layout_width="44dp" android:layout_height="44dp" android:layout_marginLeft="14dp" android:src="@mipmap/ic_del" android:layout_alignParentTop="true" android:layout_marginStart="14dp" android:layout_alignParentStart="true"/>
            <TextView android:textSize="18dp" android:textColor="@color/textcolor3" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:text="@string/deldevice" android:layout_toEndOf="@+id/imageView57"/>
        </RelativeLayout>
        <TextView android:textSize="21dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_closemanage" android:background="@drawable/btn_bg6_p" android:layout_width="100dp" android:layout_height="44dp" android:layout_marginBottom="5dp" android:text="@string/closemanage" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
