<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#00000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/rel_add_bg" android:background="@drawable/add_bg" android:layout_width="match_parent" android:layout_height="260dp" android:layout_marginLeft="4dp" android:layout_marginRight="4dp">
        <TextView android:textSize="21dp" android:textColor="@color/textcolor" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/resetpwd" android:layout_centerHorizontal="true"/>
        <RelativeLayout android:id="@+id/rl_layout" android:layout_width="match_parent" android:layout_height="50dp"/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="50dp">
                <TextView android:textSize="20sp" android:textColor="#ff000000" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password1"/>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <EditText android:textSize="20dp" android:textColor="#ff000000" android:id="@+id/et_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:numeric="integer"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="20dp">
                <TextView android:textSize="20sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password2"/>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <EditText android:textSize="20dp" android:textColor="#ff000000" android:id="@+id/et_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:numeric="integer"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginBottom="16dp" android:layout_alignParentBottom="true">
            <TextView android:textSize="20dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_refresh" android:background="@drawable/refresh1_p" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/sure" android:layout_weight="1"/>
            <TextView android:textSize="20dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_close" android:background="@drawable/refresh2_p" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/cancle" android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
