<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#00000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@drawable/add_bg" android:layout_width="250dp" android:layout_height="200dp" android:layout_centerHorizontal="true">
        <TextView android:textSize="21dp" android:textColor="@color/textcolor" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/modify_name"/>
        <TextView android:textSize="18sp" android:textColor="@color/textcolor1" android:gravity="center" android:id="@+id/et_name" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:textSize="20dp" android:textColor="#ff000000" android:id="@+id/et_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginTop="40dp" android:baselineAligned="false">
            <TextView android:textSize="20dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_refresh" android:background="@drawable/refresh1_p" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/sure" android:layout_weight="1"/>
            <TextView android:textSize="20dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_close" android:background="@drawable/refresh2_p" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/cancle" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
