<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#70000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/rel_add_bg" android:background="@drawable/add_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="24dp" android:layout_marginTop="120dp" android:layout_marginRight="24dp" android:layout_marginBottom="140dp">
        <TextView android:textSize="21dp" android:textColor="@color/textcolor" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/adddevice" android:layout_centerHorizontal="true"/>
        <ListView android:id="@+id/scandevice_list" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="38dp" android:layout_marginBottom="166dp" android:divider="#00000000" android:dividerHeight="1dp"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginBottom="16dp" android:layout_alignParentBottom="true">
            <TextView android:textSize="20dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_refresh" android:background="@drawable/refresh1_p" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/refresh" android:layout_weight="1"/>
            <TextView android:textSize="20dp" android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_close" android:background="@drawable/refresh2_p" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/close" android:layout_weight="1"/>
        </LinearLayout>
        <ImageView android:id="@+id/img_rqcode" android:padding="1dp" android:layout_width="160dp" android:layout_height="60dp" android:layout_marginBottom="18dp" android:src="@mipmap/ic_rqcode" android:layout_above="@+id/linearLayout" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
