<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#00000000" android:layout_width="match_parent" android:layout_height="60dp" android:minHeight="60dp" android:textAllCaps="false">
    <RelativeLayout android:id="@+id/rel1" android:layout_width="120dp" android:layout_height="60dp" android:layout_centerVertical="true" android:layout_marginStart="1dp" android:layout_toEndOf="@+id/img_battery">
        <TextView android:textColor="@color/textcolor" android:ellipsize="end" android:id="@+id/tv_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:singleLine="true" android:layout_centerVertical="true"/>
        <TextView android:textColor="@color/textcolor1" android:ellipsize="end" android:id="@+id/tv_mac" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:singleLine="true" android:layout_below="@+id/tv_name" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <ImageView android:id="@+id/img_conn" android:padding="4dp" android:layout_width="40dp" android:layout_height="60dp" android:src="@mipmap/ic_disconn" android:layout_alignParentTop="true" android:layout_centerVertical="true" android:layout_toEndOf="@+id/rel1"/>
    <ProgressBar android:id="@+id/progressBar" android:visibility="gone" android:layout_width="40dp" android:layout_height="60dp" android:layout_alignParentTop="true" android:layout_centerVertical="true" android:layout_toEndOf="@+id/rel1" style="?android:attr/progressBarStyle"/>
    <TextView android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_open" android:background="@drawable/btn_bg1_p" android:padding="0dp" android:layout_width="55dp" android:layout_height="32dp" android:text="@string/open" android:layout_centerVertical="true" android:layout_toEndOf="@+id/img_conn"/>
    <TextView android:textColor="@color/textcolor4" android:gravity="center" android:id="@+id/tv_manage" android:background="@drawable/btn_bg1_p" android:padding="0dp" android:layout_width="55dp" android:layout_height="32dp" android:layout_marginLeft="10dp" android:text="@string/manage" android:layout_centerVertical="true" android:layout_toEndOf="@+id/tv_open"/>
    <ImageView android:id="@+id/img_battery" android:padding="3dp" android:layout_width="60dp" android:layout_height="60dp" android:src="@mipmap/ic_battery" android:layout_centerVertical="true"/>
</RelativeLayout>
